<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrationActivity">

    <LinearLayout
        android:id="@+id/wrapper"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="32dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/wrapper_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginBottom="15dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/buttonBack"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/reg_title"
                    android:textColor="@color/accent_blue"
                    android:textSize="30sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iconTitle"
                    android:layout_width="35dp"
                    android:layout_height="35dp"
                    android:layout_marginLeft="15dp"
                    app:srcCompat="@drawable/reg_icon" />

            </LinearLayout>

            <TextView
                android:id="@+id/textDescription"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/reg_description"
                android:textColor="@color/text_gray"
                android:textSize="16sp" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapper_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="45dp"
            android:layout_marginBottom="15dp"
            android:orientation="vertical">

            <EditText
                android:id="@+id/editName"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/edittext_style"
                android:ems="10"
                android:hint="@string/reg_name"
                android:inputType="text"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/text_gray" />

            <EditText
                android:id="@+id/editMail"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_style"
                android:ems="10"
                android:hint="@string/login_email"
                android:inputType="textEmailAddress"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/text_gray" />

            <EditText
                android:id="@+id/editPassword"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:layout_marginTop="15dp"
                android:background="@drawable/edittext_style"
                android:ems="10"
                android:hint="@string/login_password"
                android:inputType="textPassword"
                android:paddingLeft="15dp"
                android:paddingRight="15dp"
                android:textColorHint="@color/text_gray" />

            <ProgressBar
                android:id="@+id/loadingBar"
                style="?android:attr/progressBarStyle"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:indeterminateTint="@color/accent_blue"
                android:visibility="invisible" />

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@drawable/button_style"
                android:text="@string/reg_button" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/wrapper_reg_link"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:gravity="center"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/textLoginTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/reg_title_login"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/linkSign"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="15dp"
                android:text="@string/reg_link_login"
                android:textColor="@color/accent_blue"
                android:textSize="16sp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>